--- a/correlater/www/inviteFromPhone.html
+++ b/correlater/www/inviteFromPhone.html
@@ -25,7 +25,7 @@
             <h1 id="title">Invite a Friend</h1>
         </div>
         <div data-role="content">
-            <ul data-role="listview" data-inset="true" data-icon="plus"></ul>
+            <ul data-role="listview" data-filter="true" data-filter-placeholder="Search contacts..." data-inset="true" data-icon="plus"></ul>
         </div>
     </div>
 </body>
