- Add Load Wait icon when pull events. - Add Toast message after event pulling completed.

--- a/correlater/www/chooseCalendar.html
+++ b/correlater/www/chooseCalendar.html
@@ -24,6 +24,7 @@
         </div>
         <div data-role="content">
             <form method="post" id="chooseCal" data-role="none">
+                <ul data-role="listview" data-inset="true" id="chooseCalUl" ></ul>
                 <label><input type="submit" name="submit" value="Import"></label>
             </form>
             <!-- <ul data-role="listview" data-inset="false" id="chooseCal"></ul> -->
