- Create with Facebook done - Log in with Facebook done

--- a/correlater/www/addAccount.html
+++ b/correlater/www/addAccount.html
@@ -25,10 +25,10 @@
         </div>
         <div data-role="content">
               <button id="googleLogin" class="ui-btn ui-corner-all ui-btn ui-shadow failed">
-                  Create with Google &#43;
+                  Create with Google
               </button>
-		<button id="Facebook" class="ui-btn ui-corner-all ui-btn ui-shadow fb">
-			Create with Facebook
+			  <button id="Facebook" class="ui-btn ui-corner-all ui-btn ui-shadow fb">
+			  	  Create with Facebook
               </button>
               <button id="nativeCreate" class="ui-btn ui-corner-all ui-btn ui-shadow">
                   Create Corral Account
