--- a/correlater/www/signIn.html
+++ b/correlater/www/signIn.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/global.css" />
 
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/openfb.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/signIn.js"></script>
@@ -24,7 +25,10 @@
         </div>
         <div data-role="content">
               <button id="googleLogin" class="ui-btn ui-corner-all ui-btn ui-shadow failed">
-                  Sign in with Google &#43;
+                  Sign in with Google
+              </button>
+              <button id="Facebook" class="ui-btn ui-corner-all ui-btn ui-shadow fb">
+			  	  Sign in with Facebook
               </button>
               <button id="nativeLogin" class="ui-btn ui-corner-all ui-btn ui-shadow">
                   Sign in with Corral
