- Change front end function to getAvailable to match backend function. - Add version number on side bar (debug purpose)

--- a/correlater/www/main.html
+++ b/correlater/www/main.html
@@ -42,6 +42,7 @@
               <a class="item item-icon-left" href="chooseCalendar.html" menu-close><i class="icon ion-ios7-calendar-outline"></i>Choose Calendar</a>
               <a class="item item-icon-left assertive"><i class="icon ion-information"></i>Tutorial</a>
               <a class="item item-icon-left assertive"><i class="icon ion-settings"></i>Settings</a>
+              <a class="item item-icon-left assertive"><i></i>Ver: 10/23/, 2:54am</a>
               <a class="item item-icon-left" ng-click="logout()"><i class="icon ion-log-out"></i>Log Out</a>
             </ul>
           </ion-content>
@@ -140,7 +141,7 @@
             </ion-item>
           </ion-list>
         </ion-content>
-        <ion-footer-bar class="bar bar-subfooter"> 
+        <ion-footer-bar class="bar bar-subfooter">
           <div class="sideTab">
             <div id="invisArea">
               <div class="freeSection">
@@ -158,7 +159,7 @@
             </div>
           </div>
         </ion-footer-bar>
-        <ion-footer-bar class="bar bar-positive item-input-inset"> 
+        <ion-footer-bar class="bar bar-positive item-input-inset">
           <label class="item-input-wrapper">
             <i class="icon ion-chatbox placeholder-icon"></i>
             <input id="mood" ng-model="mood" type="text" placeholder="Update your mood">
