Changed versioning format

--- a/correlater/www/main.html
+++ b/correlater/www/main.html
@@ -42,7 +42,7 @@
               <a class="item item-icon-left" href="chooseCalendar.html" menu-close><i class="icon ion-ios7-calendar-outline"></i>Choose Calendar</a>
               <a class="item item-icon-left assertive"><i class="icon ion-information"></i>Tutorial</a>
               <a class="item item-icon-left assertive"><i class="icon ion-settings"></i>Settings</a>
-              <a class="item item-icon-left assertive"><i></i>Ver: 10/23/, 2:54am</a>
+              <a class="item item-icon-left assertive"><i class="icon ion-android-developer"></i>Ver. 0.10.23.02.54</a>
               <a class="item item-icon-left" ng-click="logout()"><i class="icon ion-log-out"></i>Log Out</a>
             </ul>
           </ion-content>
