--- a/correlater/www/main.html
+++ b/correlater/www/main.html
@@ -166,7 +166,7 @@
             <button ng-if="isMoodSetEmpty()" class="button-icon icon ion-android-close light"
               ng-click="clearMood()">
             </button>
-          <button ng-if="isMoodSetEmpty()" class="button button-outline icon ion-edit button-light" ng-click="updateMood(); refreshMyInfo();"></button>
+          <button ng-if="isMoodSetEmpty()" class="button button-outline icon ion-edit button-light" ng-click="updateMood();"></button>
         </ion-footer-bar>
       </ion-view>
     </script>
